@@ -284,7 +284,7 @@ not secure and can easily be forged.  The target server should only accept
 connections from the proxy server running <code>mod_webauth</code>.</p>
 
 <p>To do this with a ProxyPass proxy, it's easiest to use
-<a href="http://httpd.apache.org/docs-2.0/mod/mod_headers.html">mod_headers</a>
+<a href="http://httpd.apache.org/docs-2.2/mod/mod_headers.html">mod_headers</a>
 to set extra headers based on the values of <code>WEBAUTH_</code>
 environment variables.  The remote web application then should pull its
 authentication information from those headers.</p>
@@ -459,6 +459,43 @@ never be used.
     tomcatAuthentication="false"
     acceptCount="10" debug="0"/&gt;
 </pre></div>
+
+<p>Be aware that Apache and Tomcat parse semicolons in URLs differently.
+Without careful configuration, attackers can bypass WebAuth protection
+when accessing a resource in Tomcat by exploiting this difference.  In
+Apache, the URLs <code>/srvlet/secret</code> and
+<code>/srvlet/secret;hello</code> are different URLs, but Tomcat considers
+the part after a semicolon to be a URI path parameter, ignores it, and
+treats them both as the same URL.  Therefore, if only
+<code>/srvlet/secret</code> is protected in Apache (with a
+<code>&lt;Location&gt;</code> directive, for example), an attacker can
+bypass that protection but still access the same underlying URL in
+Tomcat.</p>
+
+<p>To protect against this, any <code>&lt;Location&gt;</code> directive
+protecting a specific URL within a larger URL namespace proxied to Tomcat
+should allow for any trailing URI path parameters, as in the following
+example:</p>
+
+<div class="example"><h3>Access Control Example</h3><pre>
+# DO NOT USE THIS -- insecure!
+&lt;Location "/srvlet/secret"&gt;
+    AuthType WebAuth
+    require valid-user
+&lt;/Location&gt;
+
+# Instead, use this or some other regex that matches the path with URI
+# path parameters inserted anywhere.  Be aware that they can be in each
+# path component!  (But if JkMount refers to /srvlet, then /srvlet;hello
+# won't be sent to Tomcat by Apache and therefore is safe.)
+&lt;Location ~ "/srvlet/secret(;.*)?$"&gt;
+    AuthType WebAuth
+    require valid-user
+&lt;/Location&gt;
+</pre></div>
+
+<p>This problem applies to any Apache authentication mechanism applied to
+URLs that are proxied to Tomcat.  It is not specific to WebAuth.</p>
 </div><div class="top"><a href="#page-header"><img alt="top" src="../images/up.gif" /></a></div>
 <div class="section">
 <h2>Requesting Credentials</h2>
@@ -1824,6 +1861,6 @@ WebAuthWebKdcURL https://webkdc.stanford.edu/webkdc-service/
 <div class="bottomlang">
 <p><span>Available Languages: </span><a href="../en/mod/mod_webauth.html" title="English">&nbsp;en&nbsp;</a></p>
 </div><div id="footer">
-<p class="apache">Copyright 2011 The Apache Software Foundation.<br />Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>.</p>
+<p class="apache">Copyright 2012 The Apache Software Foundation.<br />Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>.</p>
 <p class="menu"><a href="../mod/">Modules</a> | <a href="../mod/directives.html">Directives</a> | <a href="../faq/">FAQ</a> | <a href="../glossary.html">Glossary</a> | <a href="../sitemap.html">Sitemap</a></p></div>
 </body></html>
