@@ -44,6 +44,12 @@ WebAuth 4.1.0 (unreleased)
     to get information for startup logging and reported versions in the
     modules.
 
+    Document in the mod_webauth manual a problematic interaction of URL
+    parsing between Apache and Tomcat that affects any Apache
+    authentication mechanism used to protect URLs that are proxied to
+    Tomcat.  Apache configuration to restrict access to proxied URLs needs
+    to allow for URI path parameters at the end of path segments.
+
     Update to rra-c-util 4.2:
 
     * Improve the xstrndup utility function.
